--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div class="wrapper">
          <div class="title-text">
             <div class="title login">
-               CONTACT
+               CONTACTS
             </div>
             <div class="title signup">
                CONTACTS
