--- a/index.html
+++ b/index.html
@@ -33,11 +33,14 @@
                   </div>
                   <div class="pass-link">
                      <a href="#">Forgot password?</a>
+                     
                   </div>
                   <div class="field btn">
                      <div class="btn-layer"></div>
+                    <a href="./contacts.html">
                      <input type="submit" value="Log In">
-                  </div>
+                      </a>
+               </div>
                   <div class="signup-link">
                     Don't have an account? <a href="">Sign up </a>
                   </div>
