--- a/index.html
+++ b/index.html
@@ -33,13 +33,12 @@
                   </div>
                   <div class="pass-link">
                      <a href="#">Forgot password?</a>
-                     
+                     <a href="./contacts.html">.</a>
                   </div>
                   <div class="field btn">
                      <div class="btn-layer"></div>
                     <a href="./contacts.html">
-                     <input type="submit" value="Log In">
-                      </a>
+                     <input type="submit" value="Log In"></a>
                </div>
                   <div class="signup-link">
                     Don't have an account? <a href="">Sign up </a>
